<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="rtl"
    android:background="@color/pale">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:textDirection="rtl">
        <TextView
            style="@style/AdvertioHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checklist_title"
            />
        <TextView
            style="@style/AdvertioBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checklist_note" />
        <TextView
            android:id="@+id/checklistProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:padding="14dp"
            android:background="@drawable/airport_card"
            android:textColor="@color/teal"
            android:textSize="16sp"
            android:accessibilityLiveRegion="polite" />
        <CheckBox android:id="@+id/checkPassport"
            style="@style/ChecklistItem" android:text="@string/check_passport" />
        <CheckBox android:id="@+id/checkVisa"
            style="@style/ChecklistItem" android:text="@string/check_visa" />
        <CheckBox android:id="@+id/checkTickets"
            style="@style/ChecklistItem" android:text="@string/check_tickets" />
        <CheckBox android:id="@+id/checkInsurance"
            style="@style/ChecklistItem" android:text="@string/check_insurance" />
        <CheckBox android:id="@+id/checkMoney"
            style="@style/ChecklistItem" android:text="@string/check_money" />
        <CheckBox android:id="@+id/checkEssentials"
            style="@style/ChecklistItem" android:text="@string/check_essentials" />
        <Button
            android:id="@+id/resetChecklist"
            style="@style/ServiceButton"
            android:layout_marginTop="18dp"
            android:text="@string/checklist_reset" />
    </LinearLayout>
</ScrollView>
